Fixed the JS hiddenStyle and visibleStyle comma insertion

--- a/sass/pages/_art.scss
+++ b/sass/pages/_art.scss
@@ -1,6 +1,5 @@
 .gallery-grid {
-    margin: 50px auto;
-    text-align: center;
+    margin: 20px auto;
     
     .grid-sizer,
     .item {
